Fix the footer causing the page to be horiztonally too long - fixes #103

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -860,7 +860,7 @@ figure.code {
 .footer-navigation {
   margin-top: 240px;
   margin-bottom: 40px;
-  width: 1200px;
+  width: auto;
   margin-left: auto;
   margin-right: auto;
 
